--- a/src/App.css
+++ b/src/App.css
@@ -301,6 +301,143 @@
   color: #000000;
 }
 
+.choose-dest {
+  width: 80%;
+  margin: 150px auto;
+  
+}
+
+.choose-dest__top {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.choose-dest__wrapper {
+  list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.choose-dest__title {
+  text-align: center;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 65px;
+  text-align: center;
+  margin-bottom: 80px;
+
+  color: #2C2C2C;
+}
+
+.choose-dest__picture {
+  width: 350px;
+  height: 220px;
+}
+
+.choose-dest__description {
+
+    background: #FFFFFF;
+    box-shadow: 0px 10px 25px rgb(215 190 190 / 20%);
+    width: 300px;
+    height: 150px;
+
+    font-style: normal;
+    font-size: 17px;
+    line-height: 28px;
+    color: #000000;
+    text-align: center;
+    padding: 5px;
+    margin: 0 auto;
+    
+}
+
+.choose-dest__price-btn {
+    display: flex;
+    justify-content: center;
+    column-gap: 20px;
+    align-items: center;
+}
+
+.choose-dest__price {
+  font-style: normal;
+  font-weight: bold;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FF715B;
+}
+
+.choose-dest__btn-add {
+  width: 50px;
+  height: 50px;
+  background-color: #FF715B;
+  cursor: pointer;
+}
+
+.choose-dest__viewAll {
+  font-style: normal;
+  font-weight: 500;
+  font-size: 18px;
+  line-height: 25px;
+  text-align: center;
+
+  color: #FFFFFF;
+  width: 240px;
+  height: 64px;
+  background: #FF715B;
+  cursor: pointer;
+  margin: 75px auto;
+  display: block;
+}
+
+.apps {
+  position: relative;
+  width: 80%;
+  margin: 0 auto 100px auto;
+  height: 394px;
+  background-image: url('./assets/img/apps-bg.png');
+  background-repeat: no-repeat;
+  background-size: contain;
+
+
+}
+
+
+.apps__left-part {
+  position: absolute;
+  width: 550px;
+  left: 5%;
+}
+
+
+.apps__title {
+  font-style: normal;
+  font-weight: 800;
+  font-size: 48px;
+  line-height: 65px;
+
+  color: #2C2C2C;
+}
+
+.apps__links {
+  display: flex;
+  justify-content: space-evenly
+}
+
+.apps__right-part {
+  position: absolute;
+  width: 550px;
+  right: 81px;
+  top: 4px;
+}
+
+
+.apps__right-part_img {
+  width: 600px;
+  height: 391px;
+  position: absolute;
+}
 
 
 
