--- a/src/App.css
+++ b/src/App.css
@@ -617,6 +617,118 @@
 
 }
 
+.slider {
+  width: 90%;
+  margin: 0 auto;
+}
+
+.slider__title {
+  text-align: center;
+  background: #ffffff;
+  color: #2C2C2C;
+  padding: 25px 0;
+  font-size: 50px;
+}
+
+.slider__information {
+  text-align: center;
+}
+
+.slider__country {
+  font-size: 40px;
+}
+
+.slider__hotel {
+  font-size: 33px;
+}
+
+.slider__desc {
+  font-size: 25px;
+}
+.slider__price {
+  font-weight: bold;
+  font-size: 25px;
+
+}
+
+.slider__add {
+  width: 50px;
+  height: 50px;
+  background: #FF715B;
+  font-style: normal;
+  font-weight: 500;
+  font-size: 35px;
+  line-height: 25px;
+  text-align: center;
+
+  color: #FFFFFF;
+  cursor: pointer;
+  margin-top: 50px;
+  margin-bottom: 50px;
+  border-color: #FF715B;
+}
+
+
+.center .slick-center h3 {
+  opacity: 1;
+  transform: scale(1.08);
+}
+.center h3 {
+  opacity: 0.8;
+  transition: all 300ms ease;
+}
+.content {
+  padding: 20px;
+  margin: auto;
+  width: 90%;
+}
+.slick-slide .image {
+  padding: 10px;
+}
+.slick-slide img {
+  border: 5px solid #fff;
+  display: block;
+  margin: auto;
+}
+.slick-slide img.slick-loading {
+  border: 0;
+}
+.slick-slider {
+  margin: 30px auto 50px;
+}
+.slick-dots {
+  margin-left: 0;
+}
+.slick-thumb {
+  bottom: -45px;
+}
+.slick-thumb li {
+  width: 60px;
+  height: 45px;
+}
+.slick-thumb li img {
+  filter: grayscale(100%);
+}
+.slick-thumb li.slick-active img {
+  filter: grayscale(0%);
+}
+.slick-next:before, 
+.slick-prev:before {
+  font-size: 50px;
+  line-height: 1;
+  opacity: .75;
+  color: #FF715B;
+}
+
+.slick-prev {
+  left: 0;
+}
+
+.slick-next {
+  right: 34px;
+}
+
+
 
 
 
@@ -721,6 +833,15 @@
     flex-wrap: wrap;
     margin: 0 185px;
   }
+
+  .slick-next,
+  .slick-prev {
+    display: none !important;
+  }
+  .slick-next:focus, .slick-next:hover, .slick-prev:focus, .slick-prev:hover {
+    display: none !important;
+  }
+  
 }
   
 
@@ -767,6 +888,9 @@
   .pageImage {
     width: 75%;
     height: 50%;
+  }
+  .slider__image {
+    width: 90%;
   }
 
 }
@@ -856,7 +980,31 @@
     padding: 50px 0;
   
   }
+
+  .slider__title {
+
+    font-size: 30px;
+  }
+  
+  .slider__country {
+    font-size: 25px;
+  }
+  
+  .slider__hotel {
+    font-size: 20px;
+  }
+  
+  .slider__desc {
+    font-size: 15px;
+  }
+  .slider__price {
+    font-weight: bold;
+    font-size: 20px;
+  
+  }
 }
+
+
 
 @media (max-width: 376px) {
   .offering__picture, .offering__text {
