--- a/src/App.css
+++ b/src/App.css
@@ -707,6 +707,8 @@
 }
 .slick-dots {
   margin-left: 0;
+  bottom: -53px;
+  padding-bottom: 15px;
 }
 .slick-thumb {
   bottom: -45px;
@@ -727,14 +729,17 @@
   line-height: 1;
   opacity: .75;
   color: #FF715B;
+  display: none;
 }
 
 .slick-prev {
   left: 0;
+  display: none;
 }
 
 .slick-next {
   right: 34px;
+  display: none;
 }
 
 .countries__list {
@@ -781,6 +786,7 @@ color: #A79997;
   font-size: 30px;
   width: 80%;
   margin: 0 auto;
+  padding-bottom: 50px;
 }
 
 
@@ -1064,6 +1070,10 @@ color: #A79997;
   .countries__image {
     width: 80%;
     height: 50%;
+  }
+
+  .noResults {
+    font-size: 50px;
   }
 }
 
