--- a/src/App.css
+++ b/src/App.css
@@ -789,6 +789,75 @@ color: #A79997;
   padding-bottom: 50px;
 }
 
+.bm-burger-button {
+  display: none;
+  position: relative;
+  width: 36px;
+  height: 30px;
+  left: 36px;
+  top: 36px;
+}
+
+.bm-burger-bars {
+  background: #373a47;
+}
+
+.bm-burger-bars-hover {
+  background: #FF715B;
+}
+
+.bm-cross-button {
+  height: 24px;
+  width: 24px;
+}
+
+.bm-cross {
+  background: #bdc3c7;
+}
+
+
+.bm-menu-wrap {
+  position: fixed;
+  height: 100%;
+}
+
+.bm-menu {
+  background: #373a47;
+  padding: 2.5em 1.5em 0;
+  font-size: 1.15em;
+}
+
+.bm-morph-shape {
+  fill: #373a47;
+}
+
+.bm-item-list {
+  color: #b8b7ad;
+  padding: 0.8em;
+}
+
+.bm-item {
+  display: inline-block;
+}
+
+.bm-overlay {
+  background: rgba(0, 0, 0, 0.3);
+}
+
+.bm-item {
+  display: inline-block;
+
+  color: #d1d1d1;
+  margin-bottom: 10px;
+  text-align: left;
+  text-decoration: none;
+  transition: color 0.2s;
+}
+
+.bm-item:hover {
+  color: #ffffff;
+}
+
 
 
 
@@ -906,11 +975,25 @@ color: #A79997;
   .slick-next:focus, .slick-next:hover, .slick-prev:focus, .slick-prev:hover {
     display: none !important;
   }
+
+  .bm-burger-button {
+    display: block;
+    position: relative;
+    width: 36px;
+    height: 30px;
+    left: 85px;
+    top: 67px;
+  }
   
 }
   
 
 @media (max-width: 800px) {
+
+  .bm-burger-button {
+    left: 23px;
+    top: 67px;
+  }
   .main-page__search {
       display: grid;
       margin: -18% 0 0 10%;
@@ -977,6 +1060,10 @@ color: #A79997;
 
 
 @media (max-width: 426px) {
+  .bm-burger-button {
+    left: 32px;
+    top: 21px;
+  }
   .header {
     width: 95%;
   }
@@ -1090,6 +1177,10 @@ color: #A79997;
 }
 
 @media (max-width: 321px) {
+  .bm-burger-button {
+    left: 46px;
+    top: 22px;
+  }
   .header {
     flex-wrap: wrap;
   }
@@ -1165,3 +1256,4 @@ color: #A79997;
     width: 95%;
   }
 }
+
